--- a/kubernetes/django-notes.yml
+++ b/kubernetes/django-notes.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
-  namespace: wanderlust
+  namespace: notes
   labels:
     app: frontend
 spec:
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  namespace: wanderlust
+  namespace: notes
 spec:
   type: NodePort
   selector:
